--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/fengthedroid/proxy#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.1"
   }
 }
